docs: migrate documentation to Open Knowledge Format (OKF) bundle
Move all project documentation into an OKF v0.1 knowledge bundle under docs/
(root manifest docs/index.md declares okf_version). Each former section of
CLAUDE.md and README.md becomes one concept document with type frontmatter:
overview, features, LMDB concepts, the three architecture layers, the
native-loading gotcha, the decoder extension-point contract, build/run/test,
conventions, the read-write roadmap, and the agent playbooks. Related docs are
joined by bundle-relative cross-links instead of duplication.

CLAUDE.md becomes a thin index (a "when to read which doc" table plus the rules
to load only the relevant doc and to keep docs/index.md in sync on changes);
README.md is slimmed to a public landing page that links into the bundle.

Add scripts/okf-check.ps1, a local OKF conformance checker (frontmatter + type,
reserved-file structure, full domain coverage, cross-link resolution, no
Cyrillic) for use before committing doc changes or in CI.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>